# ProyectoRUST

./: README.md
DHT11/: DHT11.ino
interfaz RUST/: Cargo.toml  backup 1 2 3 4.txt
interfaz RUST/src/: main.rs  measurements.rs
