[package]
name = "hello_world_simple"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.67"
publish = false


[dependencies]
egui = "0.22.0"
egui_extras = "0.22.0"
eframe = "0.22.0"
chrono = "0.4.26"
env_logger = "0.10"
rand = "0.8.5"
serialport = "4.2.2"
image = "0.24.7"
